Import translation work from https://crowdin.com/project/ublock

--- a/platform/mv3/extension/_locales/be/messages.json
+++ b/platform/mv3/extension/_locales/be/messages.json
@@ -304,7 +304,7 @@
     "description": "An option in a dropdown list"
   },
   "developOptionCustomDnrRules": {
-    "message": "Кастомныя правілы DNR",
+    "message": "Уласныя правілы DNR",
     "description": "An option in a dropdown list"
   },
   "developOptionDnrRulesOf": {
