Import translation work from https://crowdin.com/project/ublock

--- a/src/_locales/be/messages.json
+++ b/src/_locales/be/messages.json
@@ -1196,19 +1196,19 @@
     "description": "Text warning about an incoming redirect"
   },
   "docblockedReasonLabel": {
-    "message": "Reason:",
+    "message": "Падстава:",
     "description": "The label which prepend the actual reason why a page was blocked"
   },
   "docblockedReasonMalicious": {
-    "message": "Malicious",
+    "message": "Шкодная актыўнасць",
     "description": "An actual reason why a page was blocked"
   },
   "docblockedReasonTracker": {
-    "message": "Tracker",
+    "message": "Трэкер",
     "description": "An actual reason why a page was blocked"
   },
   "docblockedReasonDisreputable": {
-    "message": "Disreputable",
+    "message": "Сумнеўны змест",
     "description": "An actual reason why a page was blocked"
   },
   "cloudPush": {
