--- a/platform/mv3/extension/_locales/bn/messages.json
+++ b/platform/mv3/extension/_locales/bn/messages.json
@@ -37,7 +37,7 @@
   },
   "popupLocalToolsLabel": {
     "message": "On this website",
-    "description": "Label in the popup panel got the local tools section"
+    "description": "Label in the popup panel for the local tools section"
   },
   "popupTipReport": {
     "message": "এই ওয়েবসাইট নিয়ে সমস্যা জানাও",
