--- a/platform/mv3/extension/_locales/hi/messages.json
+++ b/platform/mv3/extension/_locales/hi/messages.json
@@ -37,7 +37,7 @@
   },
   "popupLocalToolsLabel": {
     "message": "On this website",
-    "description": "Label in the popup panel got the local tools section"
+    "description": "Label in the popup panel for the local tools section"
   },
   "popupTipReport": {
     "message": "इस वेबसाइट पर किसी समस्या को रिपोर्ट करें",
