--- a/platform/mv3/extension/_locales/de/messages.json
+++ b/platform/mv3/extension/_locales/de/messages.json
@@ -36,11 +36,11 @@
     "description": "Label in the popup panel for the current filtering mode"
   },
   "popupLocalToolsLabel": {
-    "message": "On this website",
+    "message": "Auf dieser Webseite",
     "description": "Label in the popup panel for the local tools section"
   },
   "popupTipReport": {
-    "message": "Ein Problem mit dieser Website melden",
+    "message": "Ein Problem melden",
     "description": "Tooltip used for the 'chat' icon in the panel"
   },
   "popupTipDashboard": {
@@ -292,7 +292,7 @@
     "description": "A button to navigate to the blocked page"
   },
   "zapperTipEnter": {
-    "message": "Element temporär entfernen",
+    "message": "Ein Element entfernen",
     "description": "Tooltip for the button used to enter zapper mode"
   },
   "zapperTipQuit": {
@@ -300,11 +300,11 @@
     "description": "Tooltip for the button used to exit zapper mode"
   },
   "pickerTipEnter": {
-    "message": "Create a custom filter",
+    "message": "Einen benutzerdefinierten Filter erstellen",
     "description": "Label for the menu entry to create cosmetic filters"
   },
   "unpickerTipEnter": {
-    "message": "Remove a custom filter",
+    "message": "Einen benutzerdefinierten Filter entfernen",
     "description": "Label for the menu entry to delete cosmetic filters"
   },
   "developDropdownLabel": {
@@ -356,23 +356,23 @@
     "description": "Short sentence to report the number of currently registered DNR rules"
   },
   "pickerSliderLabel": {
-    "message": "Move the slider to select the best match",
+    "message": "Verschiebe den Regler, um die bestmögliche Übereinstimmung auszuwählen.",
     "description": "Label to describe the purpose of the slider"
   },
   "pickerPick": {
-    "message": "Pick",
+    "message": "Auswählen",
     "description": "Text for the button to re-enter element-picking mode"
   },
   "pickerPreview": {
-    "message": "Preview",
+    "message": "Vorschau",
     "description": "Text for the button to activate preview mode"
   },
   "pickerCreate": {
-    "message": "Create",
+    "message": "Erstellen",
     "description": "Text for the button to create the filter"
   },
   "unpickerUsage": {
-    "message": "Select a filter below to highlight matching elements in the webpage. Click the trash can to remove a filter.",
+    "message": "Wähle unten einen Filter aus, um die passenden Elemente auf der Webseite hervorzuheben. Klicke auf das Papierkorbsymbol, um einen Filter zu entfernen.",
     "description": "Summary description on how to use the tool to remove custom filters"
   }
 }
